tests/skip/duplicate-setters-1.stderr
error: encountered duplicate `#[skip(setters)]` attribute for field
 --> $DIR/duplicate-setters-1.rs:5:24
  |
5 |     #[skip(setters)] #[skip(setters)]
  |                        ^^^^

error: duplicate `#[skip(setters)]` here
 --> $DIR/duplicate-setters-1.rs:5:7
  |
5 |     #[skip(setters)] #[skip(setters)]
  |       ^^^^
